--- a/index.html
+++ b/index.html
@@ -21,7 +21,23 @@
             </a>
         </nav>
     </header>
-    <main class="container">
+    <main class="container-fluid">
+        <div class="row">
+            <div class="col-md-3 side-bar-scroll">
+                <h3>All Pokemon</h3>
+                <ol id="api-pokemon"></ol>
+            </div>
+
+            <div class="col-md-6" id="current-pokemon">
+                <div class="text-center"><em>No Pokemon</em></div>
+            </div>
+
+            <div class="col-md-3 side-bar-scroll">
+                <h3>My Pokemon</h3>
+                <ol id="my-pokemon"></ol>
+            </div>
+
+        </div>
         <div id="app"></div>
     </main>
     <footer class="bg-dark text-light">
@@ -29,7 +45,9 @@
             <p><small>Made with love by Codeworks</small></p>
         </div>
     </footer>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"
+        integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="app/main.js" type="module"></script>
 </body>
 
